--- a/app.css
+++ b/app.css
@@ -205,15 +205,13 @@ h1:hover {
 }
 
 .cards {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+    display: grid;
 }
 
 .card {
     padding: 2.3em 2em;
     max-width: 340px;
-    display: flex;
+    display: grid;
     border-radius: 1.5rem;
     flex-direction: column;
     gap: 2rem;
@@ -279,7 +277,6 @@ article:nth-of-type(3) div {
         list-style: none;
         position: fixed;
         inset: 0 0 0 0;
-        gap: 1.5rem;
         align-items: center;
         font-size: 1.4rem;
         z-index: 100;
@@ -290,6 +287,10 @@ article:nth-of-type(3) div {
 
     .primary-navigation>li {
         position: relative;
+    }
+
+    .primary-navigation>li+li {
+        margin-top: 1.5rem;
     }
 
     .primary-navigation>li>a {
@@ -339,15 +340,14 @@ article:nth-of-type(3) div {
 .hero-section {
     display: flex;
     flex-direction: column;
-    gap: min(2vw, 1rem);
     margin-top: 3rem;
     color: var(--color-primary);
 }
 
 .bottom-hero {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 1rem;
+    margin-top: min(2vw, 1rem);
 }
 
 .hero-section>img {
@@ -426,10 +426,10 @@ article:nth-of-type(3) div {
 .works-section .imgs-container {
     width: min(95%, 70em);
     margin-inline: auto;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 2rem;
 }
+
 
 .works-section a {
     font-size: min(5vw, 1.5rem);
@@ -463,7 +463,6 @@ article:nth-of-type(3) div {
     margin-top: 7rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 
 .team-section .team-text {
@@ -508,8 +507,7 @@ article:nth-of-type(3) div {
     margin-top: 7rem;
     width: min(95%, 70em);
     margin-inline: auto;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 2rem;
 }
 
@@ -526,7 +524,6 @@ article:nth-of-type(3) div {
 
 .author {
     display: flex;
-    gap: 1.5rem;
     color: var(--color-primary);
 }
 
@@ -536,6 +533,7 @@ article:nth-of-type(3) div {
 }
 
 .author div {
+    margin-left: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -551,8 +549,7 @@ footer {
     margin-top: 6rem;
     color: #fff;
     background-color: #100E1D;
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 2rem;
     padding: 2em 0 10em 0;
     position: relative;
@@ -564,7 +561,10 @@ footer {
     margin-inline: auto;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+}
+
+.footer-navigation>li+li {
+    margin-top: 1rem;
 }
 
 .footer-navigation>li>a {
@@ -607,7 +607,10 @@ footer .brand {
 
 footer .brand>div {
     display: flex;
-    gap: 0.5rem;
+}
+
+footer .brand>div>a+a {
+    margin-left: 0.5rem;
 }
 
 footer .brand+div {
@@ -655,8 +658,12 @@ footer>p {
 @media (min-width: 35em) {
     .primary-navigation {
         display: flex;
-        gap: min(4vw, 3rem);
         font-size: min(2.5vw, 1.4rem);
+    }
+
+    .primary-navigation>li+li {
+        margin-left: min(4vw, 3rem);
+        ;
     }
 
     h1 {
@@ -779,9 +786,9 @@ footer>p {
     footer {
         display: flex;
         flex-direction: row;
-        gap: 0;
         padding: 5em;
     }
+
 
     input {
         width: min(100%, 350px);
@@ -807,8 +814,8 @@ footer>p {
 
 @media(min-width: 770px) {
     .cards {
-        flex-direction: row;
-        gap: 0;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 2rem;
     }
 
     .primary-navigation {
@@ -824,7 +831,6 @@ footer>p {
         margin-top: 9rem;
         flex-direction: row;
         justify-content: space-between;
-        gap: 8rem;
     }
 
     .team-section .team-text {
@@ -850,11 +856,6 @@ footer>p {
     .hero-btn {
         bottom: 3px;
         left: 262px;
-    }
-
-    .cards {
-        flex-direction: row;
-        gap: 3rem;
     }
 }
 
